# translate-extension

./: .env  .gitignore  Cargo.toml  main.rs  readme.md  server.rs
api/: mod.rs
api/dmail/: mod.rs  user.rs
api/test1/: client.rs
api/test2/: server.rs
biz/: mod.rs
static/: 404.html
svr/: db.rs  error.rs  mod.rs  mq.rs  redis.rs
svr/middleware/: access_log.rs  auth.rs  form_validator.rs  grace_shotdowm.rs  mod.rs  request.rs  time_out.rs
